# The_Brownfield_Cartographer

./: .env.example  .gitignore  Makefile  PHASE_2_REPORT.md  README.md  RECONNAISSANCE.md  pyproject.toml
.cartography/: .gitkeep  CODEBASE.md  lineage_graph.json  module_graph.json  onboarding_brief.md
src/: __init__.py  cli.py  orchestrator.py
src/agents/: __init__.py  archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: __init__.py  dag_config_parser.py  git_velocity.py  python_dataflow.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: __init__.py  knowledge_graph.py
src/models/: __init__.py  edges.py  graph.py  nodes.py
tests/: test_analyzers.py  test_hydrologist.py  test_surveyor.py
