[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "A multi-agent codebase intelligence system for rapid FDE onboarding in production environments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ramlla" },
]
keywords = ["codebase", "intelligence", "static-analysis", "data-lineage", "LLM"]
dependencies = [
  # CLI
  "typer>=0.12.0",
  "rich>=13.7.0",
  # Static Analysis
  "tree-sitter>=0.23.0",
  "tree-sitter-python>=0.23.0",
  "tree-sitter-javascript>=0.23.0",
  "tree-sitter-yaml>=0.6.0",
  # SQL Parsing & Lineage
  "sqlglot>=25.0.0",
  # Graph & Data
  "networkx>=3.3",
  "pydantic>=2.7.0",
  # LLM & Embeddings
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-google-genai>=1.0.0",
  "langgraph>=0.1.0",
  "openai>=1.30.0",
  "google-generativeai>=0.7.0",
  "tiktoken>=0.7.0",
  # Vector Store & Embeddings
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",
  # Data & Notebook Parsing
  "nbformat>=5.10.0",
  "PyYAML>=6.0.1",
  "toml>=0.10.2",
  # Git Analysis
  "gitpython>=3.1.43",
  # HTTP / GitHub
  "httpx>=0.27.0",
  "requests>=2.32.0",
  # Utilities
  "python-dotenv>=1.0.1",
  "tqdm>=4.66.0",
  "loguru>=0.7.2",
  "scikit-learn>=1.5.0",
]

[project.scripts]
cartographer = "src.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "black>=24.0.0",
  "mypy>=1.10.0",
  "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

